// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Listbox renders a default state 1`] = `
<div>
  <div
    aria-activedescendant="fluent-option_r_0_"
    class="fui-Listbox"
    role="listbox"
    tabindex="0"
  >
    <div
      aria-selected="false"
      class="fui-Option"
      data-activedescendant=""
      id="fluent-option_r_0_"
      role="option"
    >
      <span
        aria-hidden="true"
        class="fui-Option__checkIcon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.03 13.9 3.56 10a.75.75 0 0 0-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 0 0-1.06-1.06l-9.94 9.94Z"
            fill="currentColor"
          />
        </svg>
      </span>
      Red
    </div>
    <div
      aria-selected="false"
      class="fui-Option"
      id="fluent-option_r_1_"
      role="option"
    >
      <span
        aria-hidden="true"
        class="fui-Option__checkIcon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.03 13.9 3.56 10a.75.75 0 0 0-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 0 0-1.06-1.06l-9.94 9.94Z"
            fill="currentColor"
          />
        </svg>
      </span>
      Green
    </div>
    <div
      aria-selected="false"
      class="fui-Option"
      id="fluent-option_r_2_"
      role="option"
    >
      <span
        aria-hidden="true"
        class="fui-Option__checkIcon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.03 13.9 3.56 10a.75.75 0 0 0-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 0 0-1.06-1.06l-9.94 9.94Z"
            fill="currentColor"
          />
        </svg>
      </span>
      Blue
    </div>
  </div>
</div>
`;

exports[`Listbox renders with a selected option 1`] = `
<div>
  <div
    aria-activedescendant="fluent-option_r_3_"
    class="fui-Listbox"
    role="listbox"
    tabindex="0"
  >
    <div
      aria-selected="true"
      class="fui-Option"
      data-activedescendant=""
      id="fluent-option_r_3_"
      role="option"
    >
      <span
        aria-hidden="true"
        class="fui-Option__checkIcon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.03 13.9 3.56 10a.75.75 0 0 0-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 0 0-1.06-1.06l-9.94 9.94Z"
            fill="currentColor"
          />
        </svg>
      </span>
      Red
    </div>
    <div
      aria-selected="false"
      class="fui-Option"
      id="fluent-option_r_4_"
      role="option"
    >
      <span
        aria-hidden="true"
        class="fui-Option__checkIcon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.03 13.9 3.56 10a.75.75 0 0 0-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 0 0-1.06-1.06l-9.94 9.94Z"
            fill="currentColor"
          />
        </svg>
      </span>
      Green
    </div>
    <div
      aria-selected="false"
      class="fui-Option"
      id="fluent-option_r_5_"
      role="option"
    >
      <span
        aria-hidden="true"
        class="fui-Option__checkIcon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.03 13.9 3.56 10a.75.75 0 0 0-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 0 0-1.06-1.06l-9.94 9.94Z"
            fill="currentColor"
          />
        </svg>
      </span>
      Blue
    </div>
  </div>
</div>
`;
